Bug 51629 - [swrast] piglit fbo-1d regression
Summary: [swrast] piglit fbo-1d regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-01 14:13 UTC by Vinson Lee
Modified: 2012-07-05 13:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-07-01 14:13:30 UTC
mesa: 1d21bd057a6b1701dd44a79e82259c0f3ded2b70

Run piglit fbo-1d on swrast.

$ ./bin/fbo-1d -auto
Probe at (10,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (11,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (12,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (13,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (14,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (15,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (16,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (17,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (18,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (19,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (20,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (21,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (22,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (23,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (24,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (25,10)
  Expected: 1.000000 0.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (26,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (27,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (28,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (29,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (30,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (31,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (32,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (33,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (34,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (35,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (36,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (37,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (38,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (39,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (40,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
Probe at (41,10)
  Expected: 0.000000 1.000000 0.000000
  Observed: 1.000000 1.000000 1.000000
PIGLIT: {'result': 'fail' }


62b971673950148eb949ba23d7fdc47debea16f0 is the first bad commit
commit 62b971673950148eb949ba23d7fdc47debea16f0
Author: Marek Olšák <maraeo@gmail.com>
Date:   Wed Jun 27 06:10:30 2012 +0200

    vbo: first ASSERT_OUTSIDE_BEGIN_END then FLUSH, not the other way around
    
    Reviewed-by: Brian Paul <brianp@vmware.com>

:040000 040000 56d4884d4678c5f664f1e296fe25b9e24dd3224c bf047b310c7d9a19aace765b22d7095527db2d99 M	src
bisect run success
Comment 1 Marek Olšák 2012-07-05 13:35:58 UTC
Fixed by 9f0f2f9512c3c9dcf875efa490b587f010b260c1. Closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.